--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -9,17 +10,20 @@
   0%{
     opacity: 0;
   }
+  15%{
+    opacity: 0.7;
+  }
   25%{
-    opacity: 0.8;
+    opacity: 0.9;
   }
   50%{
     opacity: 1;
   }
   75%{
-    opacity: 0.3;
+    opacity: 1;
   }
   100%{
-    opacity: 0;
+    opacity: 1;
   }
 }
 
@@ -57,4 +61,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+.accordion{
+  border-radius: 10px;
+}
+
+#aboutButton{
+  border: 1px rgb(143, 143, 143) solid;
+}
+.alertDiv{
+  position: absolute;
+  top: 0vh;
+  width: 100%;
+  z-index: 5;
+  position: fixed;
 }
